{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 61,
  "lineage": "0dc76e95-c53c-552c-178a-3d4f49da0b97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-039566fa41c1ee4aa",
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc-internet-gateway"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0274831fceb00de95",
            "owner_id": "923052674113",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039566fa41c1ee4aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sta21-test-env-private-route-table"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aff87f43a001a857",
            "owner_id": "923052674113",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039566fa41c1ee4aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sta21-test-env-public-route-table"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_rtb_private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eb1666bd26eb75b",
            "route_table_id": "rtb-0274831fceb00de95",
            "subnet_id": "subnet-0c1249d7835346181"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_rtb_private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c69a2b0865190ac",
            "route_table_id": "rtb-0274831fceb00de95",
            "subnet_id": "subnet-0d5d83a406ddf53d8"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_rtb_private_subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c923e31f7d33f6b",
            "route_table_id": "rtb-0274831fceb00de95",
            "subnet_id": "subnet-042365673a6ebddfb"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_rtb_public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c90cf3fc8362b0f",
            "route_table_id": "rtb-0aff87f43a001a857",
            "subnet_id": "subnet-0ef792ac8f886298c"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_rtb_public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b4b3d1e8f93d04d",
            "route_table_id": "rtb-0aff87f43a001a857",
            "subnet_id": "subnet-0e8040a72de071ecf"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_rtb_public_subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08704bd7863f0f8e2",
            "route_table_id": "rtb-0aff87f43a001a857",
            "subnet_id": "subnet-075fc81c80fd1ea30"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb-test-appservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:security-group/sg-07f1bf1cc14e782b6",
            "description": "App server alb sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f1bf1cc14e782b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa6e6d79dfe8ed2b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sta21-test-env-appservers-ALB-sg",
            "name_prefix": null,
            "owner_id": "923052674113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sta21-test-env-appservers-ALB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_security_group.sg-test-appservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb-test-webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:security-group/sg-083073f9b8d848b6b",
            "description": "Internet facing alb for test env",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083073f9b8d848b6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sta21-test-env-webservers-ALB-sg",
            "name_prefix": null,
            "owner_id": "923052674113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sta21-test-env-webservers-ALB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rds-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:security-group/sg-0f1a4012fd23e7736",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1a4012fd23e7736",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa6e6d79dfe8ed2b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sta21-test-env-rds-sg",
            "name_prefix": null,
            "owner_id": "923052674113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sta21-test-env-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_security_group.sg-test-appservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-test-appservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:security-group/sg-0fa6e6d79dfe8ed2b",
            "description": "Secutiry group for testdb appserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa6e6d79dfe8ed2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083073f9b8d848b6b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sta21-test-env-appservers-sg",
            "name_prefix": null,
            "owner_id": "923052674113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sta21-test-env-appservers-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_security_group.sg-alb-test-webservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:subnet/subnet-0c1249d7835346181",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.12.4.0/24",
            "id": "subnet-0c1249d7835346181",
            "map_public_ip_on_launch": false,
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:subnet/subnet-0d5d83a406ddf53d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.12.5.0/24",
            "id": "subnet-0d5d83a406ddf53d8",
            "map_public_ip_on_launch": false,
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:subnet/subnet-042365673a6ebddfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.12.6.0/24",
            "id": "subnet-042365673a6ebddfb",
            "map_public_ip_on_launch": false,
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:subnet/subnet-0ef792ac8f886298c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.12.1.0/24",
            "id": "subnet-0ef792ac8f886298c",
            "map_public_ip_on_launch": true,
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:subnet/subnet-0e8040a72de071ecf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.12.2.0/24",
            "id": "subnet-0e8040a72de071ecf",
            "map_public_ip_on_launch": true,
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:subnet/subnet-075fc81c80fd1ea30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.12.3.0/24",
            "id": "subnet-075fc81c80fd1ea30",
            "map_public_ip_on_launch": true,
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-09437f82a1b6ffd30"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923052674113:vpc/vpc-09437f82a1b6ffd30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-05cd0d187e72a82e7",
            "default_route_table_id": "rtb-06b0723e7cb3ad2f1",
            "default_security_group_id": "sg-0f92dfa5bc607505a",
            "dhcp_options_id": "dopt-35391c4e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09437f82a1b6ffd30",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06b0723e7cb3ad2f1",
            "owner_id": "923052674113",
            "tags": {
              "Name": "sta21-test-env-vpc"
            }
          }
        }
      ]
    }
  ]
}